src/main/resources/sf-resource/SfServerPkgs/objects/MetadataDescription__c.object
<CustomObject>
    <fields>
        <fullName>MetadataLog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MetadataLog</label>
        <referenceTo>MetadataLog__c</referenceTo>
        <relationshipLabel>Metadata Log</relationshipLabel>
        <relationshipName>Retrieved_Metadata</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationId__c</fullName>
        <label>Organization Id</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RefreshDateTime__c</fullName>
        <label>Refresh DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>ApexClass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ApexPage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppMenu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AssignmentRules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoResponseRule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomApplication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomField</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomLabels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomObject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomObjectTranslation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomTab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EscalationRule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HomePageLayout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ListView</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MatchingRule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MatchingRules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QuickAction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RemoteSiteSetting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Role</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WebLink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workflow</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Retrieved Metadata</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>OrganizationId__c</columns>
        <columns>MetadataLog__c</columns>
        <columns>RefreshDateTime__c</columns>
        <columns>Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MDD-{0000000}</displayFormat>
        <label>MetadataDescription Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retrieved Metadata</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>